Se reimplemento el fotomosaico ahora usando uso de una libreria externa que permite la reduccion y la colocacion se maneja de manera interna.
 Changes to be committed:
	new file:   nbproject/private/config.properties
	modified:   nbproject/private/private.properties
	modified:   nbproject/private/private.xml
	modified:   nbproject/project.properties
	modified:   src/Controlador/FotomosaicoListener.java
	modified:   src/ManipulacionImagenes/Filtros.java
	modified:   src/Vista/PanelFotomosaico.java